# Yolo-LibTorch

./: .gitignore  CMakeLists.txt
src/: Yolo.cpp
test/: Parameter.cpp  test.cpp
